密钥服务器docker服务部署开发
参考部署流程：https://github.com/jefferywork/example-deploy-php/blob/e86c06daffd4860cbe1ec8504f9929a4a0904b2a/.github/deploy.common.yml

--- a/.github/workflows/shell_syntax.yml
+++ b/.github/workflows/shell_syntax.yml
@@ -39,4 +39,4 @@ jobs:
       - name: Find and check shell scripts
         run: |
           # Find all shell scripts and check them with shellcheck
-          find . -name "*.sh" -print0 | xargs -0 shellcheck
+          shellcheck -e SC2046 -e SC2317 scripts/*.sh
