--- a/.github/deploy.example.yml
+++ b/.github/deploy.example.yml
@@ -15,11 +15,11 @@ env:
   DOCKER_IMAGE: "registry.cn-hangzhou.aliyuncs.com/example_namespace/example_image"
   # Docker 容器启动配置
   CONTAINER_NAME: "example_container"
-  DOCKER_APP_PARAMS: "-p 91:80 -e APP_ENV=example"
+  DOCKER_RUN_PARAMS: "-p 91:80 -e APP_ENV=example"
   # 服务器
   SERVER_IP: ${{ secrets.SERVER_IP }}
   SERVER_USER: ${{ secrets.SERVER_USER }}
-  SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+  SERVER_SSH_PRIVATE_KEY: ${{ secrets.SERVER_SSH_PRIVATE_KEY }}
 
 jobs:
   CI-Build:
