--- a/.github/workflows/shell_syntax.yml
+++ b/.github/workflows/shell_syntax.yml
@@ -18,12 +18,12 @@ env:
   DOCKER_IMAGE: "example_namespace/image"
   CONTAINER_NAME: "example_container"
   # Docker 启动参数参数
-  DOCKER_APP_PARAMS: "-e KEY1=VAL1 -e KEY2=VAL2"
+  DOCKER_RUN_PARAMS: "-e KEY1=VAL1 -e KEY2=VAL2"
   # 服务器
   SERVER_IP: "example_host"
   SERVER_USER: "example_server_user"
-  SERVER_PWD: "example_pwd"
-  SSH_PRIVATE_KEY: "example_ssh_private_key"
+  SERVER_PASSWORD: "example_pwd"
+  SERVER_SSH_PRIVATE_KEY: "example_ssh_private_key"
 
 jobs:
   build:
