--- a/.github/workflows/deploy.example.yml
+++ b/.github/workflows/deploy.example.yml
@@ -72,8 +72,9 @@ jobs:
           EOF
           )
           
+          
           # 部署
-          deploy_docker_url="https://raw.githubusercontent.com/jefferyjob/deployments/refs/heads/${{ github.ref_name }}/scripts/deploy.docker.sh"
+          deploy_docker_url="https://raw.githubusercontent.com/jefferyjob/deployments/refs/heads/feature/before_after_func/scripts/deploy.docker.sh"
           echo "deploy_docker_url: $deploy_docker_url"
           curl -o deploy.sh $deploy_docker_url
           chmod +x deploy.sh
